# django_quizz

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
postgres/: Dockerfile
src/: .env.example  Dockerfile  entrypoint.sh
src/apps/assessments/: models.py  urls.py
src/apps/assessments/api/: serializers.py  urls.py  views.py
src/apps/assessments/management/commands/: populate_quizzes.py
src/apps/assessments/migrations/: 0001_initial.py  0002_customuseranswer.py  0002_question.py  0003_customuserquizz.py  0004_alter_quizz_name.py
src/apps/user/: admin.py
src/apps/user/api/: serializers.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py
src/core/: settings.py  urls.py
src/fixtures/: questions_fixture.json
src/fixtures/csv_fmt/: quizzes.csv
src/fixtures/json_fmt/: questions_fixture.json  quizzes_fixture.json
