[project]
name = "django-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav Panasenko",email = "fenyochek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.5,<4"
dependencies = [
    "django (==5.2.4)",
    "djangorestframework (==3.16.0)",
    "django-environ (==0.12.0)",
    "psycopg2-binary (==2.9.10)",
    "drf-spectacular (==0.28.0)",
    "gunicorn (==23.0.0)",
    "uvicorn (==0.35.0)"
]

[tool.poetry]
packages = [{include = "django_study", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
